Change path of the entry

--- a/misa/misa.html
+++ b/misa/misa.html
@@ -36,7 +36,7 @@
   <body>
     <div class="wrapper">
       <h1>This my house entry please</h1>
-      <a href="/entry.html">Entry</a>
+      <a href="entry.html">Entry</a>
     </div>
     <div class="stage">
       <div class="mariposa">
